# can_egui_app

./: Cargo.toml
src/: canbus.rs  main.rs  ui_components.rs
